changed spell error

--- a/report/eacl2014.tex
+++ b/report/eacl2014.tex
@@ -24,7 +24,7 @@
 
 \title{Shrdlite Project Report}
 
-\author{Alexnder Sjosten
+\author{Alexander Sjosten
   \\\And
   Asbjorn Hagalin \\
   \\\And
